--- a/app/index.html
+++ b/app/index.html
@@ -2,12 +2,12 @@
 <html class="no-js" ng-app="meApp">
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="">
+    <title>Gregory Collett - CV/Resume</title>
+    <meta name="description" content="Gregory Collett - Curriculum Vitae/Resume contains some cool info about me">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet'  type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/animate.css/animate.css" />
     <!-- endbower -->
