--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,11 @@
     <!-- endbuild -->
   </head>
   <body data-ng-controller="mainController" data-spy="scroll" data-target=".navbar">
+    <div class="github-fork-ribbon-wrapper right">
+        <div class="github-fork-ribbon">
+            <a href="javascript:void(0);">Under Construction</a>
+        </div>
+    </div>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
@@ -44,6 +49,10 @@
               <a href="#page-skills" style="display:none;"></a>
               <a href="javascript:void(0);" data-ng-click="goToPage('page-skills')">Skills</a>
             </li> -->
+            <li>
+              <a href="#page-education" style="display:none;"></a>
+              <a href="javascript:void(0);" data-ng-click="goToPage('page-education')">Education</a>
+            </li>
             <li>
               <a href="#page-projects" style="display:none;"></a>
               <a href="javascript:void(0);" data-ng-click="goToPage('page-projects')">Projects</a>
